--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <h2><b>Zakopane</b> - Największa miejscowość w bezpośrednim otoczeniu Tatr, duży ośrodek sportów zimowych, potocznie nazywany zimową stolicą Polski.<h2>
 
-<a href="inff1"><img src="https://github.com/slo-1c-28-2021/z1/blob/main/inff1.JPG" > </a>
+<a href="inff1"><img src="https://raw.githubusercontent.com/slo-1c-28-2021/z1/main/inff1.JPG" > </a>
 <a href="inff2"><img src="ścieżka dostępu do obrazka" > </a>
 <a href="inff3"><img src="ścieżka dostępu do obrazka" > </a>
 <a href="inff4"><img src="ścieżka dostępu do obrazka" > </a>
