--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <h2><b>Zakopane</b> - Największa miejscowość w bezpośrednim otoczeniu Tatr, duży ośrodek sportów zimowych, potocznie nazywany zimową stolicą Polski.<h2>
 
-<a href="inff1"><img src="slo-1c-28-2021/z1/main/inff1.JPG" > </a>
-<a href="inff2"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff3"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff4"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff5"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff6"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff7"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff8"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff9"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff10"><img src="ścieżka dostępu do obrazka"> </a>
+<a href="inff1.jpg"><img src="slo-1c-28-2021/z1/main/inff1.JPG" > </a>
+<a href="inff2.jpg"><img src="ścieżka dostępu do obrazka" > </a>
+<a href="inff3.jpg"><img src="ścieżka dostępu do obrazka" > </a>
+<a href="inff4.jpg"><img src="ścieżka dostępu do obrazka" > </a>
+<a href="inff5.jpg"><img src="ścieżka dostępu do obrazka" > </a>
+<a href="inff6.jpg"><img src="ścieżka dostępu do obrazka" > </a>
+<a href="inff7.jpg"><img src="ścieżka dostępu do obrazka" > </a>
+<a href="inff8.jpg"><img src="ścieżka dostępu do obrazka" > </a>
+<a href="inff9.jpg"><img src="ścieżka dostępu do obrazka" > </a>
+<a href="inff10.jpg"><img src="ścieżka dostępu do obrazka"> </a>
 
 <h2>
 <div style="float: right; width: 1500px;">
