--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <h2><b>Zakopane</b> - Największa miejscowość w bezpośrednim otoczeniu Tatr, duży ośrodek sportów zimowych, potocznie nazywany zimową stolicą Polski.<h2>
 
-<a href="inff1.JPG"><img src="slo-1c-28-2021/z1/main/inff1.JPG" > </a>
-<a href="inff2.JPG"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff3.JPG"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff4.JPG"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff5.JPG"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff6.JPG"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff7.JPG"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff8.JPG"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff9.JPG"><img src="ścieżka dostępu do obrazka" > </a>
-<a href="inff10.JPG"><img src="ścieżka dostępu do obrazka"> </a>
+<a href= "img/medium/0001.jpg" target="_blank" title=""> <img src="img/small/0001.jpg">	</a>
+<a href= "img/medium/0002.jpg" target="_blank" title=""> <img src="img/small/0002.jpg">	</a>
+<a href= "img/medium/0003.jpg" target="_blank" title=""> <img src="img/small/0003.jpg">	</a>
+<a href= "img/medium/0004.jpg" target="_blank" title=""> <img src="img/small/0004.jpg">	</a>
+<a href= "img/medium/0005.jpg" target="_blank" title=""> <img src="img/small/0005.jpg">	</a>
+<a href= "img/medium/0006.jpg" target="_blank" title=""> <img src="img/small/0006.jpg">	</a>
+<a href= "img/medium/0007.jpg" target="_blank" title=""> <img src="img/small/0007.jpg">	</a>
+<a href= "img/medium/0008.jpg" target="_blank" title=""> <img src="img/small/0008.jpg">	</a>
+<a href= "img/medium/0009.jpg" target="_blank" title=""> <img src="img/small/0009.jpg">	</a>
+<a href= "img/medium/0010.jpg" target="_blank" title=""> <img src="img/small/0010.jpg">	</a>
 
 <h2>
 <div style="float: right; width: 1500px;">
