--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 <span style="color: green">
 
 <h2><b>Zakopane</b> - Największa miejscowość w bezpośrednim otoczeniu Tatr, duży ośrodek sportów zimowych, potocznie nazywany zimową stolicą Polski.<h2>
-
-<a href= "inff1.jpg" target="_blank" title=""> <img src="img/small/0001.jpg">	</a>
-<a href= "inff2.jpg" target="_blank" title=""> <img src="img/small/0002.jpg">	</a>
-<a href= "inff3.jpg" target="_blank" title=""> <img src="img/small/0003.jpg">	</a>
-<a href= "inff4.jpg" target="_blank" title=""> <img src="img/small/0004.jpg">	</a>
-<a href= "inff5.jpg" target="_blank" title=""> <img src="img/small/0005.jpg">	</a>
-<a href= "inff6.jpg" target="_blank" title=""> <img src="img/small/0006.jpg">	</a>
-<a href= "inff7.jpg" target="_blank" title=""> <img src="img/small/0007.jpg">	</a>
-<a href= "inff8.jpg" target="_blank" title=""> <img src="img/small/0008.jpg">	</a>
-<a href= "inff9.jpg" target="_blank" title=""> <img src="img/small/0009.jpg">	</a>
-<a href= "inff10.jpg" target="_blank" title=""> <img src="img/small/0010.jpg">	</a>
+<a href= "inff1.jpg" target="_blank" title=""> <img src="inff1.jpg">	</a>
+<a href= "inff2.jpg" target="_blank" title=""> <img src="inff2.jpg">	</a>
+<a href= "inff3.jpg" target="_blank" title=""> <img src="inff3.jpg">	</a>
+<a href= "inff4.jpg" target="_blank" title=""> <img src="inff4.jpg">	</a>
+<a href= "inff5.jpg" target="_blank" title=""> <img src="inff5.jpg">	</a>
+<a href= "inff6.jpg" target="_blank" title=""> <img src="inff6.jpg">	</a>
+<a href= "inff7.jpg" target="_blank" title=""> <img src="inff7.jpg">	</a>
+<a href= "inff8.jpg" target="_blank" title=""> <img src="inff8.jpg">	</a>
+<a href= "inff9.jpg" target="_blank" title=""> <img src="inff9.jpg">	</a>
+<a href= "inff10.jpg" target="_blank" title=""> <img src="inff10.jpg">	</a>
 
 <h2>
 <div style="float: right; width: 1500px;">
