--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <span style="color: green">
 
 <h2><b>Zakopane</b> - Największa miejscowość w bezpośrednim otoczeniu Tatr, duży ośrodek sportów zimowych, potocznie nazywany zimową stolicą Polski.<h2>
-<a href= "inff1.JPG" target="_blank" title=""> <img src="inff1.JPG">	</a>
+<a href= "inff1.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff1.JPG">	</a>
 <a href= "inff2.jpg" target="_blank" title=""> <img src="inff2.jpg">	</a>
 <a href= "inff3.jpg" target="_blank" title=""> <img src="inff3.jpg">	</a>
 <a href= "inff4.jpg" target="_blank" title=""> <img src="inff4.jpg">	</a>
