--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <h2><b>Zakopane</b> - Największa miejscowość w bezpośrednim otoczeniu Tatr, duży ośrodek sportów zimowych, potocznie nazywany zimową stolicą Polski.<h2>
 <a width = "100" height = "100" href= "inff1.JPG" target="_blank" title=""> <img src="inff1.JPG">	</a>
-<a href= "inff2.jpg" target="_blank" title=""> <img src="inff2.jpg">	</a>
-<a href= "inff3.jpg" target="_blank" title=""> <img src="inff3.jpg">	</a>
-<a href= "inff4.jpg" target="_blank" title=""> <img src="inff4.jpg">	</a>
-<a href= "inff5.jpg" target="_blank" title=""> <img src="inff5.jpg">	</a>
-<a href= "inff6.jpg" target="_blank" title=""> <img src="inff6.jpg">	</a>
-<a href= "inff7.jpg" target="_blank" title=""> <img src="inff7.jpg">	</a>
-<a href= "inff8.jpg" target="_blank" title=""> <img src="inff8.jpg">	</a>
-<a href= "inff9.jpg" target="_blank" title=""> <img src="inff9.jpg">	</a>
-<a href= "inff10.jpg" target="_blank" title=""> <img src="inff10.jpg">	</a>
+<a width = "100" height = "100" href= "inff2.jpg" target="_blank" title=""> <img src="inff2.jpg">	</a>
+<a width = "100" height = "100" href= "inff3.jpg" target="_blank" title=""> <img src="inff3.jpg">	</a>
+<a width = "100" height = "100" href= "inff4.jpg" target="_blank" title=""> <img src="inff4.jpg">	</a>
+<a width = "100" height = "100" href= "inff5.jpg" target="_blank" title=""> <img src="inff5.jpg">	</a>
+<a width = "100" height = "100" href= "inff6.jpg" target="_blank" title=""> <img src="inff6.jpg">	</a>
+<a width = "100" height = "100" href= "inff7.jpg" target="_blank" title=""> <img src="inff7.jpg">	</a>
+<a width = "100" height = "100" href= "inff8.jpg" target="_blank" title=""> <img src="inff8.jpg">	</a>
+<a width = "100" height = "100" href= "inff9.jpg" target="_blank" title=""> <img src="inff9.jpg">	</a>
+<a width = "100" height = "100" href= "inff10.jpg" target="_blank" title=""> <img src="inff10.jpg">	</a>
 
 <h2>
 <div style="float: right; width: 1500px;">
