--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <h2><b>Zakopane</b> - Największa miejscowość w bezpośrednim otoczeniu Tatr, duży ośrodek sportów zimowych, potocznie nazywany zimową stolicą Polski.<h2>
 <a width = "100" height = "100" href= "inff1.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff1.JPG">	</a>
-<a width = "100" height = "100" href= "inff2.JPG" target="_blank" title=""> <img src="inff2.JPG"> </a>
-<a width = "100" height = "100" href= "inff3.JPG" target="_blank" title=""> <img src="inff3.JPG</a>
-<a width = "100" height = "100" href= "inff4.JPG" target="_blank" title=""> <img src="inff4.JPG</a>
-<a width = "100" height = "100" href= "inff5.JPG" target="_blank" title=""> <img src="inff5.JPG</a>
-<a width = "100" height = "100" href= "inff6.JPG" target="_blank" title=""> <img src="inff6.JPG</a>
-<a width = "100" height = "100" href= "inff7.JPG" target="_blank" title=""> <img src="inff7.JPG</a>
-<a width = "100" height = "100" href= "inff8.JPG" target="_blank" title=""> <img src="inff8.JPG</a>
-<a width = "100" height = "100" href= "inff9.JPG" target="_blank" title=""> <img src="inff9.JPG</a>
-<a width = "100" height = "100" href= "inff10.JPG" target="_blank" title=""> <img src="inff10.JPG</a>
+<a width = "100" height = "100" href= "inff2.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff2.JPG"> </a>
+<a width = "100" height = "100" href= "inff3.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff3.JPG"></a>
+<a width = "100" height = "100" href= "inff4.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff4.JPG"></a>
+<a width = "100" height = "100" href= "inff5.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff5.JPG"></a>
+<a width = "100" height = "100" href= "inff6.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff6.JPG"></a>
+<a width = "100" height = "100" href= "inff7.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff7.JPG"></a>
+<a width = "100" height = "100" href= "inff8.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff8.JPG"></a>
+<a width = "100" height = "100" href= "inff9.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff9.JPG"></a>
+<a width = "100" height = "100" href= "inff10.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff10.JPG"></a>
 
 <h2>
 <div style="float: right; width: 1500px;">
