--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <span style="color: green">
 
 <h2><b>Zakopane</b> - Największa miejscowość w bezpośrednim otoczeniu Tatr, duży ośrodek sportów zimowych, potocznie nazywany zimową stolicą Polski.<h2>
-<a width = "100" height = "100" href= "inff1.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff1.JPG">	</a>
+<a width = "100" height = "100" href= "inff1.JPG" target="_blank" title=""> <img src="inff1.JPG">	</a>
 <a width = "100" height = "100" href= "inff2.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff2.JPG"> </a>
 <a width = "100" height = "100" href= "inff3.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff3.JPG"></a>
 <a width = "100" height = "100" href= "inff4.JPG" target="_blank" title=""> <img width = "100" height = "100" src="inff4.JPG"></a>
